[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/stages/stage1/stage1.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/player/player1.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/stages/stages.gd" type="Script" id=3]
[ext_resource path="res://assets/music/placeholder.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/player/sprites/avatar.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/sprites/shieldBar.png" type="Texture" id=6]
[ext_resource path="res://assets/stages/ui.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 720, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.5815, 393.9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55.4243, 374.612 )

[node name="stages" type="Node2D"]
script = ExtResource( 3 )

[node name="stage1" parent="." instance=ExtResource( 1 )]

[node name="borders" type="StaticBody2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders"]
position = Vector2( 720, -20.13 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="borders"]
position = Vector2( 695.632, 741.624 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="borders"]
position = Vector2( -22.2488, 370.812 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="borders"]
position = Vector2( 1062.64, 360 )
shape = SubResource( 3 )

[node name="ui" type="ColorRect" parent="."]
margin_left = 1000.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -30.0
margin_bottom = -320.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ui/VBoxContainer"]
margin_right = 230.0
margin_bottom = 14.0
text = "HCSpace"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ui/VBoxContainer"]
margin_top = 39.0
margin_right = 230.0
margin_bottom = 276.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="HSeparator" type="HSeparator" parent="ui/VBoxContainer"]
margin_top = 301.0
margin_right = 230.0
margin_bottom = 305.0

[node name="HBoxContainer" type="HBoxContainer" parent="ui/VBoxContainer"]
margin_left = 36.0
margin_top = 330.0
margin_right = 194.0
margin_bottom = 598.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ui/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 268.0

[node name="shieldsBar" type="TextureProgress" parent="ui/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 50.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
value = 80.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0.482353, 0.482353, 0.482353, 1 )
tint_over = Color( 0.996078, 0.996078, 0.996078, 1 )

[node name="lblShield" type="Label" parent="ui/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 50.0
margin_bottom = 268.0
text = "10"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="ui/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 268.0

[node name="hpBar" type="TextureProgress" parent="ui/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 50.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
value = 80.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0.431373, 0.235294, 0.235294, 1 )
tint_over = Color( 0.945098, 0.647059, 0.647059, 1 )
tint_progress = Color( 1, 0.537255, 0.537255, 1 )

[node name="lblHP" type="Label" parent="ui/VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 254.0
margin_right = 50.0
margin_bottom = 268.0
text = "10"
align = 1
valign = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="ui/VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 268.0

[node name="energyBar" type="TextureProgress" parent="ui/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 50.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
value = 80.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 6 )
fill_mode = 3
tint_under = Color( 0.431373, 0.423529, 0.235294, 1 )
tint_progress = Color( 0.976471, 1, 0.537255, 1 )

[node name="lblEnergy" type="Label" parent="ui/VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 254.0
margin_right = 50.0
margin_bottom = 268.0
text = "20"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
autoplay = true

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 500, 670 )
[connection signal="value_changed" from="ui/VBoxContainer/HBoxContainer/VBoxContainer/shieldsBar" to="ui" method="_on_shieldsBar_value_changed"]
[connection signal="value_changed" from="ui/VBoxContainer/HBoxContainer/VBoxContainer2/hpBar" to="ui" method="_on_hpBar_value_changed"]
[connection signal="value_changed" from="ui/VBoxContainer/HBoxContainer/VBoxContainer3/energyBar" to="ui" method="_on_energyBar_value_changed"]
